[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "streamlit>=1.36.0",
    "pandas>=2.2.2",
]

[tool.setuptools]
packages = ["features"]

